[gd_scene load_steps=5 format=2]

[ext_resource path="res://ASSETS/TitleScreen/Buttons/Menu_Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://ASSETS/TitleScreen/Buttons/ExitButton.gd" type="Script" id=2]
[ext_resource path="res://ASSETS/TitleScreen/eng_status_area_sentry_blue.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 91.3889, 43.2374 )

[node name="QuitButton" instance=ExtResource( 1 )]
margin_right = 320.0
margin_bottom = 90.0
rect_min_size = Vector2( 320, 90 )
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="." index="0"]
visible = false
position = Vector2( 162.701, 99.8465 )
scale = Vector2( 2.48547, 1.68364 )
texture = ExtResource( 3 )

[node name="Label" parent="." index="1"]
anchor_right = 2.0
anchor_bottom = 2.0
margin_right = -320.0
margin_bottom = -90.0
text = "quit"
valign = 1

[node name="Exit" type="Area2D" parent="." index="2"]
collision_layer = 65536
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit" index="0"]
position = Vector2( 68.8651, 40.2596 )
shape = SubResource( 1 )

[connection signal="focus_entered" from="." to="." method="_on_QuitButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_QuitButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_QuitButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_QuitButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_QuitButton_pressed"]
[connection signal="area_entered" from="Exit" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Exit" to="." method="_on_Area2D_area_exited"]
